--- a/capstone-design/css/cart.css
+++ b/capstone-design/css/cart.css
@@ -5,7 +5,6 @@
 	border-collapse: collapse;
 }
 .cart_container{
-	margin-top: 100px;
   width: 1920px;
   /* height: 900px; */
 }
@@ -13,7 +12,7 @@
 /* cart Page header */
 .cart_section1{
     width: 100%;
-    height: 200px;
+    height: 350px;
     text-align: center;
     word-break: keep-all;
     background-color: #083844;
@@ -22,7 +21,7 @@
 .cart_headerTitle{
     display: flex;
     position: relative;
-    height: 200px;
+    line-height: 350px;
     width: 1920px;
     min-width: 1200px;
     text-align: center;
