--- a/capstone-design/css/cart.css
+++ b/capstone-design/css/cart.css
@@ -1,5 +1,11 @@
-@charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+@font-face {
+  font-family: 'Chosunilbo_myungjo';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Chosunilbo_myungjo.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 /* cart.html page */
 *{
 	border-collapse: collapse;
@@ -7,6 +13,9 @@
 .cart_container{
   width: 1920px;
   /* height: 900px; */
+}
+input{
+	font-family: 'Chosunilbo_myungjo';
 }
 
 /* cart Page header */
@@ -16,7 +25,7 @@
     text-align: center;
     word-break: keep-all;
     background-color: #083844;
-		margin-bottom: 50px;
+	margin-bottom: 50px;
 }
 .cart_headerTitle{
     display: flex;
@@ -132,7 +141,7 @@
 }
 .cartItem_content .deleteAllBtn{
 	float: right;
-	margin-left: 20px;
+	margin: 20px 0;
 	width: 160px;
 	height: 40px;
 	font-size: 18px;
@@ -232,7 +241,7 @@
 	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
 	text-align: left;
 	justify-content: center;
-  align-items: center;
+  	align-items: center;
 }
 .recycleCap p{
 	display: inline-block;
