--- a/capstone-design/css/cart.css
+++ b/capstone-design/css/cart.css
@@ -50,7 +50,7 @@ input{
 
 /* cart progress content */
 .cart_content{
-		width: 1200px;
+	width: 1200px;
     margin: 0 auto;
     height: auto;
     word-break: keep-all;
@@ -101,11 +101,10 @@ input{
 }
 .cartItem_content .cartItem_list{
 	display: inline-block;
-
 	margin-bottom: 30px;
 	font-size: 20px;
 	background-color: #fff;
-	border-radius: 20px;
+	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
 }
 .cartItem_content .cartItem_list img{
 	width: 120px;
@@ -155,11 +154,29 @@ input{
 	border: 2px solid #000;
 	border-radius: 5px;
 	background-color: #fff;
+	font-weight: bold;
 }
 .cartItem_content .deleteAllBtn:hover, 
 .cartItem_content .deleteBtn:hover{
 	color: #fff;
 	background-color: #000;
+}
+
+/* 카트 섹션 */
+.cart_section2, 
+.cart_section3, 
+.cart_section4, 
+.cart_section5{
+    border-radius: 10px;
+	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
+}
+.cart_title{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.cartWrap{
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 /* 수량 선택 버튼 */
@@ -181,7 +198,7 @@ input{
 	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
 	display: flex;
 	margin-bottom: 30px;
-	border-radius: 20px;
+	border-radius: 10px;
 }
 .cartTotal_box{
 	width: 800px;
@@ -231,16 +248,17 @@ input{
 
 /* 재활용 */
 .recycleCap{
-	display: flex;
-	margin: 0 auto;
-	width: 1200px;
-	height: 200px;
-	margin-bottom: 30px;
-	background-color: #fff;
-	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
-	text-align: left;
-	justify-content: center;
-  	align-items: center;
+    display: flex;
+    margin: 0 auto;
+    width: 1200px;
+    height: 200px;
+    margin-bottom: 30px;
+    background-color: #fff;
+    box-shadow: 0px 3px 9px rgba(0,0,0,.1);
+    text-align: left;
+    justify-content: center;
+    align-items: center;
+	border-radius: 10px;
 }
 .recycleCap p{
 	display: inline-block;
@@ -270,7 +288,10 @@ input{
 .recycleCap img{
 	width: 150px;
 }
-
+.recycle_comment{
+	font-weight: bold;
+	font-size: 20px;
+}
 
 /* 배송 및 결제 */
 .cart_Info{
@@ -283,7 +304,7 @@ input{
 	margin-bottom: 30px;
 	font-size: 20px;
 	background-color: #fff;
-	border-radius: 20px;
+	border-radius: 10px;
 }
 .cart_title{
 	width: 1200px;
@@ -328,15 +349,16 @@ input{
 	margin-bottom: 20px;
 	padding: 10px;
 	width: 300px;
+	height: 50px;
 }
 #tel1{
-	width: 100px;
+	width: 70px;
 }
 #tel2{
-	width: 100px;
+	width: 120px;
 }
 #tel3{
-	width: 100px;
+	width: 120px;
 }
 .cart_Info .findZipNo{
 	width: 150px;
@@ -349,7 +371,8 @@ input{
 	width: 600px;
 }
 .cart_Info input[type="radio"]{
-	margin-top: 20px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 .cart_Info_button{
 	width: 1200px;
@@ -385,6 +408,24 @@ input{
 }
 
 /* 주문 상세 확인 */
+.cart_section5 table{
+	overflow: hidden;
+}
+.cart_section5 .cart_orderInfo,
+.cart_section5 .cart_addrInfo,
+.cart_section5 .cart_payInfo{
+	background-color: #14566614;
+}
+.cart_section5 .myinfo2{
+    font-weight: normal;
+	display: inline-block;
+	padding-top: 10px;
+}
+
+.cart_section5 .myinfo2_last{
+	font-weight: normal;
+}
+
 .cartTotal_final{
 	margin: 0 auto;
 	background-color: #fff;
@@ -393,7 +434,7 @@ input{
 	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
 	display: flex;
 	margin-bottom: 30px;
-	border-radius: 20px;
+	border-radius: 10px;
 }
 .cartTotal_box_final{
 	width: 800px;
@@ -543,7 +584,4 @@ input{
 }
 .stepper-item:last-child::after {
   content: none;
-}
-.cart_qty{
-
 }
