--- a/capstone-design/css/review.css
+++ b/capstone-design/css/review.css
@@ -1,8 +1,19 @@
-@charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+@font-face {
+  font-family: 'Chosunilbo_myungjo';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Chosunilbo_myungjo.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 
 .sub_container{
 	width: 1920px;
 	height: auto;
+}
+
+.sub_container input{
+	font-family: 'Chosunilbo_myungjo';
 }
 
 /* subPage header */
@@ -66,14 +77,16 @@
     width: 250px;
     height: 50px;
     font-size: 18px;
+	font-weight: bold;
     float: right;
 	border-radius: 10px;
 	background-color: #fff;
-	border: 1px solid #000;
+	border: 2px solid #000;
 }
 .rvBtn1:hover{
 	background-color: gray;
 	color: #fff;
+	border: none;
 }
 
 /* 리뷰 보기 */
@@ -147,6 +160,10 @@
 	line-height: normal;
 	margin-bottom: 5px;
 }
+.reviewBox .RV_line{
+	margin: 5px;
+	display: inline-block;
+}
 .reviewBox .RVblend{
     clear: right;
 	height: auto;
@@ -171,17 +188,18 @@
 	text-align: center;
 }
 
-
 /* 리뷰 작성 폼 */
 .writeRV{
 	margin: 0 auto;
 	width: 1200px;
-	font-size: 25px;
 	background: #fff;
-	border: 1px solid #000;	
+	box-shadow: 0px 3px 9px rgba(0,0,0,.1);
+	border-radius: 10px;
+	padding-bottom: 10px;
 }
 table{
 	margin: 0 auto;
+	font-size: 20px;
 }
 th{
 	width: 200px;
@@ -216,11 +234,13 @@ table tr td textarea{
 	margin: 50px 0;
 }
 .uploadBtn, .modifyBtn{
-	width: 300px;
-	height: 70px;
-	border-radius: 35px;
-	background-color: #ccc;
-	border: 1px solid #ccc;
+    width: 300px;
+    height: 70px;
+    border-radius: 35px;
+    background-color: #ccc;
+    border: 1px solid #ccc;
+    font-size: 20px;
+	font-weight: bold;
 }
 .uploadBtn:hover, .modifyBtn:hover{
 	background-color: #B9B9B9;
@@ -228,4 +248,49 @@ table tr td textarea{
 }
 table tr .RVcontents{
 	padding-right: 50px;
+}
+
+/* 리뷰 작성할 상품 선택 */
+.selectMyCs{
+	width: auto;
+	margin: 0 auto;
+	padding-bottom: 10px;
+}
+.selectMyCs table{
+    width: 1200px;
+    height: 200px;
+    border-radius: 10px;
+    box-shadow: 0px 3px 9px rgba(0,0,0,.1);
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 40px;
+    background-color: #fff;
+}
+.selectMyCs table #line1{
+    width: 25%;
+    border-right: 1px solid #E7E7E7;
+}
+.selectMyCs table #line2{
+	width: 60%;
+	padding-left: 20px;
+}
+.selectMyCs table #line3{
+	width: 15%;
+	text-align: center;
+	border-left: 1px solid #E7E7E7;
+}
+.selectRVbtn{
+	width: 130px;
+	height: 60px;
+	font-weight: bold;
+	font-size: 18px;
+	border-radius: 30px;
+	background-color: #fff;
+	color: #333;
+	border: 2px solid #333;
+}
+.selectRVbtn:hover{
+    background-color: #333;
+    color: #fff;
+    border: 2px solid #333;
 }
